<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="wilmol.com.github.sleepeasy.StartScreenActivity">

    <TextView
        android:id="@+id/current_time_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:textSize="28sp"
        android:text="@string/wake_up_at"
        android:layout_marginBottom="5dp"/>


    <TimePicker
        android:id="@+id/time_picker"
        android:timePickerMode="spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_time_message"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:onClick="calculateGivenTime"
        android:id="@+id/calculate_given_time"
        android:layout_below="@+id/time_picker"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep_now"
        android:onClick="sleepNow"
        android:id="@+id/button2"
        android:layout_below="@+id/calculate_given_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:onClick="options"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
